--- a/references.bib
+++ b/references.bib
@@ -1839,6 +1839,16 @@
 	url = {https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Functions}
 }
 
+@misc{mdn2024f,
+	title = {Symbol - JavaScript {$\vert$} MDN},
+	author = {{MDN}},
+	journal = {MDN Web Docs},
+	year = {2024},
+	month = jul,
+	note = {[Online; accessed 26. Sep. 2024]},
+	url = {https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Symbol}
+}
+
 @manual{wickham2023,
     title = {scales: Scale Functions for Visualization},
     author = {Hadley Wickham and Thomas Lin Pedersen and Dana Seidel},
@@ -1996,5 +2006,6 @@
   author={H{\"a}rk{\"o}nen, Toni},
   year={2019}
 }
+
 
 
