Wrote some more

--- a/references.bib
+++ b/references.bib
@@ -2051,3 +2051,109 @@
 	note = {[Online; accessed 1. Oct. 2024]},
 	url = {https://www.youtube.com/watch?v=IroPQ150F6c}
 }
+
+@article{hadar2013,
+  title={When intuition and logic clash: The case of the object-oriented paradigm},
+  author={Hadar, Irit},
+  journal={Science of Computer Programming},
+  volume={78},
+  number={9},
+  pages={1407--1426},
+  year={2013},
+  publisher={Elsevier}
+}
+
+@book{meyer1997,
+  title={Object-oriented software construction},
+  author={Meyer, Bertrand},
+  volume={2},
+  year={1997},
+  publisher={Prentice hall Englewood Cliffs}
+}
+
+@article{black2013,
+  title={Object-oriented programming: Some history, and challenges for the next fifty years},
+  author={Black, Andrew P},
+  journal={Information and Computation},
+  volume={231},
+  pages={3--20},
+  year={2013},
+  publisher={Elsevier}
+}
+
+@article{booch2008,
+  title={Object-oriented analysis and design with applications},
+  author={Booch, Grady and Maksimchuk, Robert A and Engle, Michael W and Young, Bobbi J and Connallen, Jim and Houston, Kelli A},
+  journal={ACM SIGSOFT software engineering notes},
+  volume={33},
+  number={5},
+  pages={29--29},
+  year={2008},
+  publisher={ACM New York, NY, USA}
+}
+
+@misc{gross2024,
+  author = {Carson Gross},
+	title = {The Grug Brained Developer},
+	year = {2024},
+	month = oct,
+	note = {[Online; accessed 4. Oct. 2024]},
+	url = {https://grugbrain.dev}
+}
+
+@inproceedings{smith1998,
+  title={A study of branch prediction strategies},
+  author={Smith, James E},
+  booktitle={25 years of the international symposia on Computer architecture (selected papers)},
+  pages={202--215},
+  year={1998}
+}
+
+@article{parihar2015,
+  title={Branch prediction techniques and optimizations},
+  author={Parihar, Raj},
+  journal={University of Rochester, NY, USA},
+  year={2015}
+}
+
+@incollection{raghavan1998,
+	author = {Raghavan, P. and Shachnai, H. and Yaniv, M.},
+	title = {Dynamic schemes for speculative execution of code},
+	booktitle = {Proceedings. Sixth International Symposium on Modeling, Analysis and Simulation of Computer and Telecommunication Systems (Cat. No.98TB100247)},
+	pages = {24},
+	isbn = {978-0-8186-8566},
+	publisher = {IEEE},
+	doi = {10.1109/MASCOT.1998.693711},
+	year = {1998}
+}
+
+@misc{will2016,
+	author = {Will, Brian},
+	title = {Object-Oriented Programming is Bad},
+	year = {2016},
+	month = jan,
+	publisher = {Youtube},
+	note = {[Online; accessed 4. Oct. 2024]},
+	url = {https://www.youtube.com/watch?v=QM1iUe6IofM}
+}
+
+@article{krzywinski2013,
+	author = {Krzywinski, Martin},
+	title = {Axes, ticks and grids},
+	journal = {Nature Methods},
+	volume = {10},
+	pages = {183},
+	year = {2013},
+	month = feb,
+	issn = {1548-7105},
+	publisher = {Nature Publishing Group},
+	doi = {10.1038/nmeth.2337}
+}
+
+@book{murrell2005,
+  title={R graphics},
+  author={Murrell, Paul},
+  year={2005},
+  publisher={Chapman and Hall/CRC}
+}
+
