--- a/design.Rmd
+++ b/design.Rmd
@@ -22,31 +22,72 @@ While designing my system, I have attempted to
 >
 > So, where graphical output is important, the code examples are written in R, and, where the code itself is the main focus, they are written in TypeScript. I hope this bilingualism is not too confusing and have tried to use only the basic features of each language to make the examples clear. 
 
-### Programming paradigms
+## Programming paradigm
 
-It is often the case that the same programming task can be tackled in many different ways. Programs solving the same problem can differ in how they decompose the problem, how they represent and manipulate data, how they handle state, how explicit or implicit they are about handling low-level system details versus relying on abstractions, how they structure and organize their constituent components, and so on. Dealing with these concerns, and coming up with a formal set of principles for addressing them is the job of programming paradigms [@chambers2014; @jordan2015; @van2009]. 
+> "apex predator of grug is complexity
+>
+> complexity bad
+>
+> say again:
+>
+> complexity very bad
+>
+> you say now:
+>
+> complexity very, very bad
+>
+> given choice between complexity or one on one against t-rex, grug take t-rex: at least grug see t-rex" 
+>
+> The Grug Brained Developer, @gross2024
 
-Most programming languages are geared towards one specific style of programming, typically supporting only one or two programming paradigms to a reasonable capacity [@van2009]. Fortunately, this is not the case for either JavaScript/TypeScript or R, since both are multiparadigm programming languages [@chambers2014; @mdn2024c]. Both languages support object-oriented programming, via prototype inheritance in the case of JavaScript [@mdn2024d] and the S3, S4, and R6 systems in the case of R [@wickham2019], and treat functions as first class citizens, allowing for functional programming style [@chambers2014; @mdn2024e]. Further, as C based languages, both also support classical imperative/procedural programming style, and also provide some utilities for reflective metaprogramming.  
 
-The flexibility of JavaScript and R allowed me to experiment with different programming paradigms while developing `plotscaper`. I have rewritten the JavaScript side of the package multiple times from scratch, testing out several different programming paradigms and styles in the process. Below, I provide a very broad overview of the paradigms I have tried, as well as an account of my experience of using each paradigm and some thoughts on its suitability towards designing interactive data visualization systems.
+It is often the case that the same programming task can be tackled in many different ways. Programs which solve the same problem can differ in how they decompose the problem, how they represent and manipulate data, how they handle state, how explicit they are in handling low-level details versus relying on abstractions, and so on. However, all of these concerns share one central topic: complexity [@booch2008]. Without constant effort and careful thought, software has the tendency to grow out of scope and become unmanageable. Preventing this, and coming up with a formal set of high-level principles for safeguarding against complexity is the job of programming paradigms [@chambers2014; @jordan2015; @van2009].
 
-#### Imperative programming
+All programming paradigms offer techniques for decomposing code into smaller, more manageable parts, and delineating boundaries between those parts. However, the way they do this can differ considerably. 
 
-Imperative programming style is one of the oldest and most classical styles of programming. It conceptualizes the program as a discrete sequence of steps that manipulate some mutable state [@frame2014]. In this way, it closely resembles the way CPU executes instructions.
+Most programming languages are geared towards one specific programming paradigm, and typically support only one or two to a reasonable capacity [@van2009]. Fortunately, this is not the case for either JavaScript/TypeScript or R, since both are multiparadigm programming languages [@chambers2014; @mdn2024c]. Both languages support object-oriented programming, via prototype inheritance in the case of JavaScript [@mdn2024d] and the S3, S4, and R6 systems in the case of R [@wickham2019], and treat functions as first class citizens, allowing for functional programming style [@chambers2014; @mdn2024e]. Further, as C based languages, both also support classical imperative/procedural programming style, and also provide some utilities for reflective metaprogramming.  
 
-#### Functional programming
+The flexibility of JavaScript and R had allowed me to experiment with different programming paradigms while developing my interactive data visualization package. I have rewritten the JavaScript side of the package multiple times from scratch, testing out several different programming paradigms and styles in the process. Below, I provide a rough sketch of the paradigms I have sampled, as well as an account of my experience of using each paradigm and some thoughts on its suitability for designing interactive data visualization systems.
 
-#### Object oriented programming
+### Imperative programming
 
-#### Data oriented programming
+Imperative programming is one of the oldest and most classical programming paradigms. It conceptualizes the program as a sequence of discrete steps that manipulate some mutable state [@frame2014]. In this way, it closely resembles the way computer programs get executed on the underlying hardware [barring some advanced techniques such as branch prediction and speculative execution, the CPU executes instructions sequentially, see e.g. @parihar2015; @raghavan1998].
 
-Data oriented programming (DOP) and data oriented design (DOD) are two newer programming paradigms that have been slowly gaining a foothold in the recent years. While the terms are sometimes used interchangeably, there are some important differences: DOP focuses more on high-level principles such as structuring and organizing code [@sharvit2022; @parlog2024], whereas DOD, having originated in the world of video-game development, tends to be more concerned with low-level optimization details such as memory layout and CPU access patterns [@acton2014; @bayliss2022; @kelley2023; @nikolov2018; @fabian2018]. However, there is a considerable overlap the conclusions and high-level guidelines that the two programming paradigms provide. For this reason, I will discuss both DOP and DOD here, in the same section, and refer to both as "DOP" unless explicitly stated otherwise. 
+### Functional programming
 
-The core idea of DOP is a data-first perspective. In the DOP view, programs should be viewed as transformations of data, nothing less, nothing more [@acton2014; @sharvit2022]. As a result, every program is composed of two sets of components: stateful data and stateless functions that transform this data [@fabian2018]. Data should be represented by generic data structures, formed by combining maps/structs, arrays, and primitives [for example [JSON]\; @sharvit2022]. It may even be desirable that the data adheres to the relational model [@codd1970; @moseley2006; @fabian2018]. This does not mean that the data has to actually *live* inside a relational database, just that its shape should be close to that of normalized relational database tables, with columns represented by generic arrays [@fabian2018]. 
+### Object oriented programming
 
-Data and code should always be kept separate, such that both can be reasoned about in isolation. Code should live inside modules composed of pure (stateless) functions [@fabian2018; @sharvit2022]. This strict segregation brings several benefits. The data becomes easy to pass around and serialize, and, since the code is composed of pure functions, it becomes easy to test and mock [@sharvit2022].   
+#### Encapsulation
 
-Data represents just itself - data - and there is no obligation for it to model the real world or any kind of abstract entity. As a result, and we are free to represent data in any way we want, and this can in fact bring significant performance benefits [@acton2014; @fabian2018]. A typical example of this in DOD is the Structure of Arrays (SoA; aka "parallel arrays" or "columnar format") data structure [@acton2014; @acton2019; @kelley2014], in which a list of records is stored as a single object, with the records' properties being stored as homogeneous arrays (this is also how R's `data.frame` class is implemented). This type of representation reduces memory footprint and can improve cache line utilization, resulting in faster runtime [@acton2014; @fabian2018; @kelley2023]. Another example of idiosyncratic data representation that can lead to improved performance are Entity Component Systems in videogames [@harkonen2019]. Either way, even if performance is not the nubmer one concern, another benefit data representing itself is that it allows us introduce abstraction only gradually, since we can get far by relying on generic data manipulation functions [@fabian2018; @sharvit2022].
+Encapsulation or information hiding refers to the idea that certain properties of a class should not be accessible from the outside. Encapsulation is generally seen as one of the most important concepts in OOP, since it allows for continuity: by encapsulating data/functionality, the developer of an OOP system may modify these private properties without affecting the public interface [@meyer1997]. Note that the encapsulation does not mean that the hidden data or implementation has to be *invisible* to the user, merely that the user should not be able to access it and rely on it as part of their program [@meyer1997].  
+
+#### Small interfaces
+
+A concept which is closely related to encapsulation is the idea of small interfaces: if two modules or classes communicate, they should exchange as little information as possible [@meyer1997].
+
+In practice, this idea is often not closely adhered to in OOP. It is common for class methods to receive pointers to other objects as arguments, sending all of the information contained in the object and effectively defeating the principle of small interfaces [@will2016].
+
+#### Open-closed principle
+
+Modules should be open to extension but close to modification.
+
+#### Polymorphism
+
+In other words, only the behavior of the object should matter [@black2013].
+
+#### Domain-driven design
+
+One concept that is not unique to OOP but has a strong tradition in it is domain-drive design: the idea that classes and object should model things in the business domain or the real world [@hadar2013; @meyer1997]. The stated benefit of this strategy is that this makes it easier to discover objects/classes and their relationships, by exploiting the mind's capacity for thinking about the natural world [@hadar2013; @meyer1997]. 
+
+### Data oriented programming
+
+Data oriented programming (DOP) and data oriented design (DOD) are two newer programming paradigms that have been slowly gaining a foothold in the recent years. While the terms are sometimes used interchangeably, there are some important differences: DOP focuses more on high-level principles such as structuring and organizing code [@sharvit2022; @parlog2024], whereas DOD, having originated in the world of video-game development, tends to be more concerned with low-level optimization details such as memory layout and CPU access patterns [@acton2014; @bayliss2022; @kelley2023; @nikolov2018; @fabian2018]. However, there is a considerable overlap the conclusions and high-level guidelines that the two programming paradigms provide. For this reason, I will discuss both DOP and DOD here, within the same section, and refer to both as "DOP" unless explicitly stated otherwise. 
+
+The core idea of DOP is a data-first perspective. In the DOP view, programs should be viewed as transformations of data, nothing less, nothing more [@acton2014; @fabian2018; @sharvit2022]. As a result, every program is composed of two sets of components: stateful data and stateless functions that act on and transform this data [@fabian2018]. In other words, data and code should always be kept separate, such that both can be reasoned about in isolation.Code should live inside modules composed of pure (stateless) functions [@fabian2018; @sharvit2022]. This strict segregation brings several benefits. The data becomes easy to pass around and serialize, and, since the code is composed of pure functions, it becomes easy to test and mock [@sharvit2022]. 
+
+Data should be represented by plain data structures. These can formed by combining generic components, such as primitives, arrays, and maps/dictionaries/structs [for example [JSON]\; @sharvit2022]. It may even be desirable that the data adheres to the relational model [@codd1970; @moseley2006; @fabian2018]. This does not mean that the data has to actually *live* inside a relational database, just that its shape should be close to that of normalized relational database tables, with columns represented by generic arrays [@fabian2018]. 
+
+Data represents just itself - data - and there is no obligation for it to model the real world or any kind of abstract entity. As a result, and we are free to represent data in any way we want, and this can in fact bring significant performance benefits [@acton2014; @fabian2018]. A typical example of this in DOD is the Structure of Arrays (SoA; aka "parallel arrays" or "columnar format") data structure [@acton2014; @acton2019; @kelley2023], in which a list of records is stored as a single object, with the records' properties being stored as homogeneous arrays (this is also how R's `data.frame` class is implemented). This type of representation reduces memory footprint and can improve cache line utilization, resulting in faster runtime [@acton2014; @fabian2018; @kelley2023]. Another example of idiosyncratic data representation that can lead to improved performance are Entity Component Systems in videogames [@harkonen2019]. Either way, even if performance is not the nubmer one concern, another benefit data representing itself is that it allows us introduce abstraction only gradually, since we can get far by relying on generic data manipulation functions [@fabian2018; @sharvit2022].
 
 It may seem that many of the DOP principles directly contradict many popular OOP principles, specifically encapsulation, inheritance, polymorphism, and domain driven design. However, many of these principles can either be reconciled with DOP, or DOP in fact provides better alternatives. Below, I go over these principles and provide code examples that further illustrate how DOP works. 
 
@@ -56,7 +97,7 @@ When it comes to encapsulation in DOP, we have to differentiate between encapsul
 
 Thus, encapsulation of data is certainly possible in DOP. However, a question still remains whether it is a good idea. While in OOP, encapsulation is generally seen as a net positive, in DOP it is thought to come with trade-offs. It does provide an additional layer of security, however, it also makes systems more complex and harder to debug [@fabian2018; @sharvit2022]. And, even with full encapsulation, users may still come to rely on hidden features of the system [@fabian2018]. Ultimately, it is necessary to weigh the pros and cons of encapsulating data within the context of the specific use-case.
 
-Some languages also have features which allow for a weak form encapsulation which is compatible with DOP. In JavaScript, this can be implemented by using symbol keys for object properties [@mdn2024f]. Symbols are builtin primitive and are guaranteed to be unique. If we assign a property to an object using a symbol as key and then not export the symbol, the user will not be able to access the property without using reflection. 
+Some languages also have features which allow for a weak form encapsulation which is compatible with DOP. In JavaScript, this can be implemented by using symbol keys for object properties [@mdn2024f]. Symbols are builtin primitive in JavaScript and are guaranteed to be unique. If we assign a property to an object using an unexported symbol as the key, the user will still be able to inspect the object and see the property, however, they will not be able to access it without using reflection. This is actually in line with the data hiding concept as laid out by @meyer1997.  
 
 I actually found this form a weak encapsulation a good fit for `plotscape`. For example, here is how I implemented the `Meta` mixin which allows use to store arbitrary metadata on objects:
 
@@ -171,13 +212,13 @@ $$i_{\text{product}} = i_1 + i_2 \cdot \max(j, k)$$
 
 ### Scales
 
-To visualize data, we need to be able to translate values from the space of the data to space of the graphical device (computer screen). In most data visualization systems, this is done by specialized components called scales. While there exists is a fair amount of literature on the theoretical properties of scales [SEE INTRODUCTION], much less is written about the actual details of implementing scales in concrete data visualization systems. As such, the following section is based largely on how scales have been implemented in other data visualization codebases, such as the `ggplot2` R package [@wickham2016] or `d3-scale` module of D3 [@d3-scale2024], as well on personal insights while implementing the package.
+To visualize data, we need to be able to translate values from the space of the data to space of the graphical device (computer screen). In most data visualization systems, this is done by specialized components called scales or coordinate systems. There exists is a fair amount of literature written on the theoretical properties of scales and the mechanisms of visual perception [see e.g. @krzywinski2013; @michell1986; @wilkinson2012; @stevens1946]. However, when it comes to applying this knowledge and implementing scales in concrete data visualization systems, scant information is available, and even when it is it is often quite high-level [for some rare counter-examples, see e.g. @murrell2005; @ziemkiewicz2009]. As such, the following section is based largely on how scales have been implemented in existing data visualization codebases, such as the `ggplot2` R package [@wickham2016] or `d3-scale` module of D3 [@d3-scale2024; also used by Vega @satyanarayan2015], as well as on personal insights gained while implementing the package.
 
 #### Overview
 
-From a high-level perspective, a scale is just a function $s: D \to V$ which translates values of the data $d \in D$ to values of some visual attribute $v \in V$, such as the x- and y-position, length, area, radius, or color. This function may or may not be invertible, such that each value of the visual attribute can but does not have to be identified with a unique data value.
+From a high-level perspective, a scale is just a function $s: D \to V$ which translates values of the data $d \in D$ to values of some visual attribute $v \in V$, such as the x- and y-position, length, area, radius, or color [@wilkinson2012]. This function may or may not be invertible, such that, at times, each value of the visual attribute may be identified with a unique data value (but this is not always the case).
 
-One of the most common and typical cases is where both $D$ and $V$ are subsets of the real numbers:
+One of the most common and typical cases is a scale where both $D$ and $V$ are subsets of the real numbers:
 
 $$s: [d_{min}, d_{max}] \to [v_{min}, v_{max}] \qquad d_{min}, d_{max}, v_{min}, v_{max} \in \mathbb{R}$$
 
@@ -228,17 +269,16 @@ console.log(simpleScale(5.5, 1, 10, 0, 800))
 console.log(simpleScale(10, 1, 10, 0, 800))
 ```
 
-#### Limits of modeling scales as simple functions
+#### Limits of modeling scales as simple functions {#simple-scale-limits}
 
 Simple scale functions like the one above can work fine for basic data visualization systems. However, once we begin adding more features, this design can become prohibitive. Consider, for example, what happens if we want to:
 
 - Expand the scale limits
-- Apply non-linear transformations
-- Pan, zoom, reverse, or otherwise modify the scales interactively
 - Scale discrete data
+- Apply non-linear transformations
+- Pan, zoom, reverse, reorder, or otherwise modify the scales interactively
 
-
-Let's take the first point as a motivating example. Consider what happens to data points at the limits of the data range:   
+Let's take the first point as a motivating example. Consider what happens to data points at the limits of the data range under the simple linear mapping:   
 
 ```{r}
 #| out-width: 800px
@@ -250,7 +290,7 @@ col <- ifelse(1:10 %in% c(1, 10), "indianred", "grey80")
 plot(x, y, col = col, cex = 3, xaxs = "i")
 ```
 
-The plot above shows values scaled using the simple linear mapping described above along the x-axis, i.e. $s: [1, 10] \to [0, 800]$. Notice that, since the position of the points representing the values 1 and 10 get mapped to pixel values 0 and 800 (the left and right border of the plot), resulting in only half of each point being visible. 
+The plot above shows values scaled using the simple linear mapping along the x-axis, i.e. $s: [1, 10] \to [0, 800]$. Notice that, since the position of the points representing the values 1 and 10 get mapped to pixel values 0 and 800 (the left and right border of the plot), resulting in only half of each point being visible. 
 
 To address this, most data visualization systems automatically expand the range of the domain by some pre-specified percentage:
 
@@ -262,7 +302,7 @@ To address this, most data visualization systems automatically expand the range 
 plot(x, y, col = col, cex = 3)
 ```
 
-We *could* achieve similar effect by modifying the scale function and adding an additional argument:
+We *could* achieve similar effect by modifying the simple linear mapping function and adding an additional argument:
 
 ```{ts}
 // simpleScale2.ts
@@ -272,7 +312,7 @@ export function simpleScale2(
   dmax: number,
   vmin: number,
   vmax: number,
-  exp: number,
+  exp: number, // Extra argument
 ): number {
   return (
     vmin + (exp / 2 + ((d - dmin) / (dmax - dmin)) * (1 - exp)) * (vmax - vmin)
@@ -290,7 +330,7 @@ console.log(simpleScale2(5.5, 1, 10, 0, 800, 0.1));
 console.log(simpleScale2(10, 1, 10, 0, 800, 0.1));
 ```
 
-However, with many additional arguments, the function can quickly become unwieldy. The logic inside the function's body becomes more complicated, and if we have to call the function in multiple places in our code, it may become difficult to remember the order and identity of the arguments. Further, we may want to persist or modify some of the arguments during runtime (such as when panning or zooming). Therefore, a more structured approach is required.
+However, the value of this argument is applied symmetrically, and at times, we may want to apply different expansion factor to each margin. We could split the argument into two, e.g. `expLeft` and `expRight`, however, at this point, the function signature starts to become unwieldy. Also, note that the logic inside the function's body also becomes more complicated. If we have to call the function in multiple places in our code, it may become difficult to remember what the individual arguments represent. Further, we may want to persist or modify some of the arguments during runtime (such as when panning or zooming). Therefore, a more structured approach is required.
 
 #### Solution: Two-component scales
 
@@ -304,8 +344,8 @@ $$s(d) = \color{steelblue}{v_{min} +} \color{indianred}{\frac{\color{black}{d} -
 
 That is, the linear mapping is composed of two simpler functions:
 
-- $\color{indianred}{n(d) = (d - d_{min}) / (d_{max} - d_{min})}$ maps the data value $d$ to the interval $[0, 1]$
-- $\color{steelblue}{u(p) = v_{min} + p \cdot (v_{max} - v_{min})}$, takes a value in $[0, 1]$ and maps it to $V$ 
+- $\color{indianred}{n(d) = (d - d_{min}) / (d_{max} - d_{min})}$ takes a data value $d \in D$ and maps it to the interval $[0, 1]$
+- $\color{steelblue}{u(p) = v_{min} + p \cdot (v_{max} - v_{min})}$ takes a value in $[0, 1]$ and maps it to a visual attribute value $v \in V$ 
 
 This leads us to the following definition of a scale:
 
@@ -383,7 +423,7 @@ console.log(LinearMap.unnormalize(PointMap.normalize("Prague", labels), 0, 800))
 
 ##### Inverses 
 
-Another big advantage is that if both $n$ and $u$ are invertible, then so will be $s$: we can obtain the inverse scale function by simply inverting the definition from \@ref(def:scale):
+Another benefit of two-component scale system is that, if both $n$ and $u$ are invertible, then so is $s$: we can obtain the inverse scale function by simply inverting the definition from \@ref(def:scale):
 
 ::: {.definition #scale-inverse name="Scale inverse"}
 
@@ -401,13 +441,13 @@ import { LinearMap } from "./LinearMap.ts"
 console.log(LinearMap.unnormalize(LinearMap.normalize(300, 0, 500), 0, 500))
 ```
 
-However, an inverse may not always exist. This is often the case when the domain of the data $D$ is smaller than the codomain $[0, 1]$. Take, for example, the discrete point mapping. Since $D$ is finite but $[0, 1]$ has infinitely many values, there will always be some values in $[0, 1]$ that no $d \in D$ maps to. For example, if $D = \{ Munich, Prague, Salzburg, Vienna \}$ and $Munich$ maps to 0.2, $Prague$ maps to $0.4$, and $Salzburg$ maps to $0.8$, then there are no data values which map to 0.9, 0.444, or 0.123456789. Conversely, there is nowhere in the data space to map these values back to.
+However, an inverse may not always exist. This is often the case when the domain of the data $D$ is smaller than the codomain $[0, 1]$. Take, for example, the discrete point mapping. Since $D$ is finite but $[0, 1]$ has infinitely many values, there will always be some values in $[0, 1]$ that no $d \in D$ maps to. For example, if $D = \{ Munich, Prague, Salzburg, Vienna \}$ and $Munich$ maps to 0.2, $Prague$ maps to $0.4$, and $Salzburg$ maps to $0.8$, then there are no cities which map to 0.9, 0.444, or 0.123456789. Conversely, if we get given those numeric values, then there is no obvious way to map them back to the cities. 
 
-One thing we can do however is to replace the inverse/unnormalize function with a weaker form of inverse, called retraction [@lawvere2009]. Specifically, if we have a normalize function $n: D \to [0, 1]$, then an unnormalize retraction $u^*$ will have the property that:
+One thing we can do is to replace the inverse/unnormalize function with a weaker form of inverse, called retraction [@lawvere2009]. Specifically, if we have a normalize function $n: D \to [0, 1]$, then an unnormalize retraction $u^*$ will have the property that:
 
 $$u^*(n(d)) = d \qquad \forall d \in D$$
 
-However, the function doesn't necessarily work the other way around:
+However, the converse doesn't necessarily hold:
 
 $$n(u^*(v)) = v \qquad \not\forall v \in V$$
 
@@ -438,15 +478,17 @@ console.log(PointMap.unnormalize(0.3, labels))
 
 ```
 
-While inverses are unique [@lawvere2009; @fong2019], there may be many different retraction for any function. For example, with the discrete point map above, we could use the floor function instead of rounding: assign specific label to value in $[0, 1]$ if it is less than the corresponding normalized value.
+While inverses are always unique [@lawvere2009; @fong2019], we may be able to come up with many different retractions for any given function. For example, with the discrete point map above, we could use the floor function instead of rounding and assign label to a value in $[0, 1]$ if it is less than the value of the normalized label (but more than the preceeding labels).
 
-It is also worth noting that there is nothing inherently special about the interval $[0, 1]$ as the intermediate domain: any finite subset of $\mathbb{R}$ would do. However, the interval $[0, 1]$ is convenient, both in terms of interpretation as well as for implementation, as will be discussed later.
+##### Some other remarks about the two-component scale system
 
-Finally, so far I have discussed scales as *functions*: the scale function, the normalize function, and unnormalize function. Framing scales as composition of functions leads to a nice correspondence between the mathematical definition and the code implementation. However, in practice, it may be more convenient to implement the domain and codomain as *objects* or *classes*, as we will see in the following section. The important point is that, no matter what type the two components are, each is responsible for translating values from/to its domain and the interval $[0, 1]$.
+It is worth noting that there is nothing inherently special about the interval $[0, 1]$ as the intermediate domain: any finite subset of $\mathbb{R}$ would do. However, the interval $[0, 1]$ is convenient, both in terms of interpretation as well as for implementation, as will be discussed later.
+
+Finally, so far I have discussed scales as *functions*: the scale function, the normalize function, and unnormalize function. Framing scales as composition of functions leads to a nice correspondence between the mathematical definition and the code. However, in practice, it may be more convenient to implement the domain and codomain as *objects* or *classes*, as we will see in the following section. The important point is that, no matter how the two components are represented, each is responsible for translating values from/to its domain and the interval $[0, 1]$.
 
 #### Past implementations of scales
 
-Implementing scales as composition of two components is a fairly standard practice across data visualization packages. For example, the D3 library [@bostock2011] implements scales in a functional style, with the values representing the data domain and the visual (co)domain being provided as tuples or arrays of values, either during initialization or at some later point. For illustration, here is an example from the oficial documentation [@d3-scale2024]:
+Two-component scale systems are fairly standard across data visualization packages. For example, the D3 library [@bostock2011] implements scales in a functional style, with the values representing the data domain and the visual (co)domain being provided as tuples or arrays of values, either during initialization or at some later point. For illustration, here is an example from the oficial documentation [@d3-scale2024]:
 
 ```{ts}
 #| eval: false
@@ -481,7 +523,7 @@ map = function(self, x, limits = self$get_limits()) {
 
 One feature that the models of scales that `D3` and `ggplot2` rely on is that they both treat the data domain and the visual attribute codomain as different types. In `D3`, fundamentally different functions are used to translate from $D \to [0, 1]$ and from $[0, 1] \to V$, and, in `ggplot2`, `limits` is a simple vector/tuple whereas `palette` is a function. While this approach may have some benefits, offering greater flexibility, it also does add additional complexity. Specifically, we have to use one mental model when considering the domain and another when considering the codomain. Further, this model of scales only works in one direction: mapping values $D \to V$. For going the the other way, i.e. mapping $V \to D$, other specialized functions have to be used. 
 
-I propose a model of scales which implements both the domain and the codomain as objects of the same type: `Expanse`. Fundamentally, this makes it so that the only difference between the data domain and the visual attribute codomain is which property of the scale they are assigned to. I argue that this model has several benefits, including making the code easier to reason about, as well as providing a simple interface for inverting values from $V \to D$.
+I propose a model of scales which implements both the domain and the codomain as objects of the same generic type: `Expanse<T>`. Fundamentally, this makes it so that the only difference between the data domain and the visual attribute codomain is which property of the scale they are assigned to. 
 
 Here is a (slightly) simplified version of the `Scale` interface:  
 
@@ -502,21 +544,69 @@ function pushforward<D, D>(scale: Scale<D, V>, value: D): V
 function pullback<D, V>(scale: Scale<D, V>, value: V): D
 ```
 
-The `pushforward` function *pushes values forward* through the scale, first through its domain and then its codomain, and the `pullback` function *pulls values back*, first through its codomain and then through its domain. For clarity, here is a simplified implementation:
+The `pushforward` function *pushes values forward* through the scale, first through its domain and then its codomain, and the `pullback` function *pulls values back*, first through its codomain and then through its domain. For clarity, here is their simplified implementation:
 
 ```{ts}
-function pushforward<D, V>(scale: Scale<D, V>, value: D): V {
-  return Expanse.unnormalize(scale.codomain, Expanse.normalize(scale.domain, value))
-}
+#| eval: false
+namespace Scale {
+  function pushforward<D, V>(scale: Scale<D, V>, value: D): V {
+    const { domain, codomain } = scale;
+    return Expanse.unnormalize(codomain, Expanse.normalize(domain, value));
+  }
 
-function pullback<D, V>(scale: Scale<D, V>, value: V): D {
-  return Expanse.unnormalize(scale.domain, Expanse.normalize(scale.codomain, value))
+  function pullback<D, V>(scale: Scale<D, V>, value: V): D {
+    const { domain, codomain } = scale;
+    return Expanse.unnormalize(domain, Expanse.normalize(codomain, value))
+  }
 }
 ```
 
-Most of the work is done using the two `Expanse` objects: we use `domain` to translates $D \to [0, 1]$ and codomain to translate $[0, 1] \to V$. `Scale` serves as a plumbing, connecting these two expanses together. 
+Most of the work is done using the two `Expanse` objects: we use `domain` to translates $D \to [0, 1]$ and codomain to translate $[0, 1] \to V$. `Scale` only serves as plumbing, connecting these two expanses together. 
 
-However, before diving in to discuss `Expanse`, there are also a few behaviors we may like to implement on `Scale`. Specifically, 
+I argue that this model provides several benefits. First of all, it makes the code easier to reason about. Since both the `domain` and `codomain` are of the same type, we only need to keep one mental model in mind. Second, if `domain` and `codomain` provide inverse functions (unnormalize), we get the inverse scale function $V \to D$ for free. This is the `pullback` function. Finally, there are also some functionalities we can implement on `Scale` directly, and thus simplify the interface for `Expanse`. These will be the subject of the next few sections, before we dive into `Expanse` properly. 
+
+##### Zero and one
+
+Recall that in Section \@ref(simple-scale-limits), we ran into the problem of expanding axis limits. We solved the problem by adding an additional argument to the `simpleScale` function. However, is expanding the axis limits something that we would want to do for continuous scales only?
+
+Clearly, we may want to add margins to axes which do not represent continuous data too, such the the x-axis of a typical barplot. So, we do not want this functionality to be tied to the scale's `domain` (which represents the data). We could add it to the scale's `codomain`, however, then we would be breaking with our intention of representing both domain and codomain with the same generic `Expanse` type. So what can we do?
+
+We can put the functionality for expanding axis limits directly onto `Scale`. Specifically, notice that any values passing through scale will be first converted to the interval $[0, 1]$ and then back to the space of either the domain or codomain. If we re-normalize these normalized values, we can achieve the result of expanding or shrinking axis limits. As an analogy, if `Scale` represents the plumbing between the `domain` and `codomain`, we can imagine squeezing or stretching the pipe to allow more or less water to flow through.
+
+To do this, we can add two additional parameters to `Scale`, `zero` and `one`:
+
+```{ts}
+#| eval: false
+interface Scale<D, V> {
+  domain: Expanse<D>
+  codomain: Expanse<V>
+  props: { // A dictionary of properties
+    zero: number
+    one: number
+  }
+}
+```
+
+Now, we can implement a new version of the `pushforward` function:
+
+```{ts}
+#| eval: false
+function pushforward<D, V>(scale: Scale<D, V>, value: D): V {
+  const { domain, codomain, props } = scale;
+  const { zero, one } = props
+  let normalized = Expanse.normalize(domain, value)
+  normalize = zero + normalized * (one - zero) // Re-normalize
+  return Expanse.unnormalize(codomain, normalized)
+}
+```
+
+The function's body is longer than before, however, the only real change is in the line with the comment. We push the normalized value up by the `zero` property and scale it by `(zero - one)` range. In other words, we can interpret `zero` as the proportion of the codomain range that the minimum data value will get mapped to, and `one` as the proportion of the codomain range that the maximum data value will get mapped to.
+
+We can use `zero` and `one` to implement margins. For example, by setting `zero` to 0.1 and `one` to 0.9, we can implement 10% margins on either side of the scale. That is, we get behavior similar to the `exp` argument from Section \@ref(simple-scale-limits), however, it will apply generically no matter what subtype of `Expanse` `domain` and `codomain` are, and we can manipulate each separately (for example, we could specify just a single margin).
+
+However, we can do so much more with the `zero` and `one` properties. Firstly, even though the name is a bit suggestive, `zero` and `one` can both take values *less* than zero and *more* than one. For example, by setting `zero` to -0.5 and `one` to 1.5, then the minimum and maximum data values will get mapped 50% below and 50% above the limits of the codomain range, respectively. Further, the 25 and 75 data percentiles will get mapped to the minimum and maximum of the codomain range. If we apply this to the x- or y-axes, we've just implemented *zooming*^[Technically, there's still a bit of ceremony involved if we don't start from `zero = 0` and `one = 1`, e.g. if our plot already has margins or if we're zooming multiple levels deep. This took me some time to nail down, however, it's just algebra, the highschool kind not the abstract.].
+
+
 
 ### Expanses
 
